changed background-attachment back to fixed, too low res

--- a/docroot/css/site.css
+++ b/docroot/css/site.css
@@ -20,7 +20,7 @@ body {
   background-image: url('../img/texturePaper.png');
   background-repeat: no-repeat;
   background-position: center center;
-  background-attachment: scroll;
+  background-attachment: fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
